// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Footer Footer.Content matches snapshot: Footer.Content 1`] = `
<div>
  <div
    class="nhsuk-grid-column-one-quarter"
  />
</div>
`;

exports[`Footer Footer.Copyright matches snapshot: Footer.Copyright 1`] = `
<div>
  <p
    class="nhsuk-body-s"
  >
    © NHS England
  </p>
</div>
`;

exports[`Footer Footer.Heading matches snapshot: Footer.Heading 1`] = `
<div>
  <h2
    class="nhsuk-footer__heading nhsuk-heading-s"
  />
</div>
`;

exports[`Footer Footer.List matches snapshot: Footer.List 1`] = `
<div>
  <ul
    class="nhsuk-footer__list"
  />
</div>
`;

exports[`Footer Footer.ListItem matches snapshot: Footer.ListItem 1`] = `
<div>
  <li
    class="nhsuk-footer__list-item"
  >
    <a
      class="nhsuk-footer__list-item-link"
    />
  </li>
</div>
`;

exports[`Footer Footer.ListItemLink matches snapshot: Footer.ListItemLink 1`] = `
<div>
  <a
    class="nhsuk-footer__list-item-link"
  />
</div>
`;

exports[`Footer Footer.Meta matches snapshot with list item 1`] = `
<div>
  <div
    class="nhsuk-footer__meta"
  >
    <h2
      class="nhsuk-u-visually-hidden"
    >
      Support links
    </h2>
    <ul
      class="nhsuk-footer__list"
    >
      <li
        class="nhsuk-footer__list-item"
      >
        <a
          class="nhsuk-footer__list-item-link"
          href="#"
        >
          Example link
        </a>
      </li>
    </ul>
    <p
      class="nhsuk-body-s"
    >
      © NHS England
    </p>
  </div>
</div>
`;

exports[`Footer Footer.Meta matches snapshot: Footer.Meta 1`] = `
<div>
  <div
    class="nhsuk-footer__meta"
  >
    <p
      class="nhsuk-body-s"
    >
      © NHS England
    </p>
  </div>
</div>
`;

exports[`Footer matches snapshot: Footer 1`] = `
<div>
  <footer
    class="nhsuk-footer"
    role="contentinfo"
  >
    <div
      class="nhsuk-width-container"
    >
      <div
        class="nhsuk-footer__meta"
      >
        <p
          class="nhsuk-body-s"
        >
          © NHS England
        </p>
      </div>
    </div>
  </footer>
</div>
`;
